samples/_failures_safe/1761726727_f0c4ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7fbe6c1.c: In function ‘main’:
./samples/SAFE/__tmp_a7fbe6c1.c:166:13: error: expected expression at end of input
  166 |             if (fseek(output_file, -((long)sizeof(file_info_t)), SEEK_END) ==
      |             ^~
./samples/SAFE/__tmp_a7fbe6c1.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7fbe6c1.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7fbe6c1.c:166:13: error: expected declaration or statement at end of input
